# archcheck

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: benchmark.yml  lint.yml  publish.yml  test.yml
c/: _tracking.c  barrier.c  callback.c  context.c  frame.c  interning.c
c/tracking/: barrier.h  callback.h  constants.h  context.h  errors.h  events.h  frame.h  hashtable.h  interning.h  invariants.h  memory.h  output.h  types.h
docs/: OMEGA_MATHEMATICAL_FOUNDATIONS.md  PHILOSOPHY.md  use-cases.md
requirements/: base.in  dev.in  docs.in
scripts/: benchmark.py
src/archcheck/: __init__.py  _tracking.pyi
src/archcheck/application/: __init__.py
src/archcheck/application/collectors/: __init__.py  async_collector.py  call_collector.py  classifier.py  combined.py  constants.py
src/archcheck/application/discovery/: __init__.py  layers.py  libs.py  modules.py
src/archcheck/application/merge/: __init__.py  builder.py
src/archcheck/application/reporters/: __init__.py  _base.py  console.py  json.py  json_reporter.py  plain_text.py  protocol.py  strategies.py
src/archcheck/application/services/: __init__.py  analyzer.py  arch_checker.py  merger.py  parser.py  tracker.py
src/archcheck/application/static_analysis/: __init__.py  graph_builder.py  registry.py
src/archcheck/application/validators/: __init__.py  _base.py  _registry.py  boundary_validator.py  cycle_validator.py  di_aware_validator.py
src/archcheck/domain/: __init__.py  codebase.py  events.py  exceptions.py  graphs.py  merged_graph.py  static_graph.py
src/archcheck/domain/exceptions/: __init__.py  base.py  parsing.py  validation.py  violation.py
src/archcheck/domain/model/: __init__.py  architecture.py  async_call_graph.py  call_graph.py  call_info.py  call_instance.py  call_site.py  call_type.py  callee_info.py  callee_kind.py  check_result.py  check_stats.py  class_.py  codebase.py  combined_call_graph.py  configuration.py  coverage_report.py  decorator.py  di.py  edge_nature.py  entry_points.py  enums.py  function.py  function_edge.py  function_info.py  graph.py  hidden_dep.py  implementation_info.py  import_.py  import_graph.py  inheritance_graph.py  interface_info.py  layer_violation.py  lib_call_site.py  lib_edge.py  location.py  merged_call_graph.py  module.py  parameter.py  purity.py  (+9 more)
src/archcheck/domain/ports/: __init__.py  collector.py  reporter.py  rule_repository.py  source_parser.py  validator.py  visitor.py
src/archcheck/domain/predicates/: __init__.py  base.py  class_predicates.py  function_predicates.py  module_predicates.py
src/archcheck/infrastructure/: __init__.py  safe_callback.py  tracking.py
src/archcheck/infrastructure/adapters/: __init__.py  ast_parser.py  cached_parser.py
src/archcheck/infrastructure/analysis/: __init__.py  edge_classifier.py  module_imports.py
src/archcheck/infrastructure/analyzers/: __init__.py  base.py  body_analyzer.py  call_resolver.py  class_analyzer.py  class_resolver.py  context.py  decorator_analyzer.py  function_analyzer.py  import_analyzer.py
src/archcheck/infrastructure/filters/: __init__.py  composite.py  event_type.py  path.py  types.py
src/archcheck/presentation/api/: __init__.py  _checks.py  _helpers.py  dsl.py  patterns.py
src/archcheck/presentation/pytest_plugin/: __init__.py  fixtures.py
tests/: __init__.py  factories.py
tests/c/: Makefile  test_barrier.c  test_callback.c  test_context.c  test_frame.c  test_interning.c  test_threading.c  test_tsan_interning.c
tests/integration/: __init__.py  test_barrier_integration.py  test_c_module.py  test_free_threaded.py  test_real_architecture.py  test_tracking_safety.py
tests/unit/: test_philosophy_compliance.py
tests/unit/application/collectors/: test_classifier.py
tests/unit/application/discovery/: test_layers.py  test_libs.py  test_modules.py
tests/unit/application/merge/: __init__.py  test_builder.py  test_static_builder.py
tests/unit/application/reporters/: __init__.py  test_console.py  test_json.py  test_json_reporter.py  test_plain_text.py  test_strategies.py
tests/unit/application/services/: test_analyzer.py  test_merger.py  test_parser.py  test_tracker.py
tests/unit/application/static_analysis/: __init__.py  test_graph_builder.py  test_registry.py
tests/unit/application/validators/: test_boundary_validator.py  test_cycle_validator.py  test_di_aware_validator.py
tests/unit/domain/: test_codebase.py  test_graphs.py  test_merged_graph.py  test_static_graph.py
tests/unit/domain/exceptions/: test_base.py  test_parsing.py  test_validation.py  test_violation.py
tests/unit/domain/model/: test_architecture.py  test_call_graph.py  test_call_info.py  test_class_.py  test_codebase.py  test_decorator.py  test_di.py  test_enums.py  test_function.py  test_graph.py  test_import_.py  test_import_graph.py  test_inheritance_graph.py  test_location.py  test_module.py  test_parameter.py  test_purity.py  test_resolved_class.py  test_rule.py  test_runtime_call_graph.py  test_symbol_table.py  test_violation.py
tests/unit/domain/predicates/: test_class_predicates.py  test_function_predicates.py  test_module_predicates.py
tests/unit/infrastructure/: test_ctypes_boundary.py  test_free_threaded_builder.py  test_safe_callback.py
tests/unit/infrastructure/analyzers/: __init__.py  test_base.py  test_body_analyzer.py  test_call_resolver.py  test_class_analyzer.py  test_context.py  test_decorator_analyzer.py  test_function_analyzer.py  test_import_analyzer.py
tests/unit/infrastructure/filters/: __init__.py  test_composite.py  test_event_type.py  test_path.py
tests/unit/presentation/api/: test_dsl.py  test_dsl_class.py  test_dsl_edge.py  test_dsl_function.py  test_patterns.py
