[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archcheck"
version = "0.1.0"
description = "Extensible framework for static + runtime architecture analysis (Python 3.14)"
authors = [{name = "Yuriy Krasilnikov"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
keywords = [
    "architecture",
    "testing",
    "ast",
    "clean-architecture",
    "hexagonal",
    "dependency-injection",
    "static-analysis",
    "runtime-analysis",
    "code-quality",
    "sys-monitoring",
    "call-graph",
    "extensible",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
    "Framework :: Pytest",
]

# No runtime dependencies - pure stdlib for core
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "pytest-benchmark>=5.2.3",
    "mypy>=1.19.0",
    "ruff>=0.14.6",
    "pre-commit>=4.5.0",
    "build>=1.3.0",
    "twine>=6.2.0",
    "mutmut>=3.4.0",
]

test = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "coverage[toml]>=7.12.0",
]

docs = [
    "sphinx>=8.2.3",
    "furo>=2025.9.25",
    "myst-parser>=4.0.1",
    "sphinx-autodoc-typehints>=3.5.2",
]

benchmark = [
    "pytest-benchmark>=5.2.3",
    "scalene>=1.5.55",
]

[project.urls]
Homepage = "https://github.com/YuriyKrasilnikov/archcheck"
Documentation = "https://archcheck.readthedocs.io"
Repository = "https://github.com/YuriyKrasilnikov/archcheck"
Issues = "https://github.com/YuriyKrasilnikov/archcheck/issues"

[project.entry-points.pytest11]
archcheck = "archcheck.presentation.pytest_plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/archcheck"]

[tool.hatch.version]
path = "src/archcheck/__init__.py"

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # annotations
    "S",   # bandit (security)
    "PT",  # pytest style
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "archcheck: marks architecture tests",
]

[tool.coverage.run]
source = ["src/archcheck"]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.mutmut]
paths_to_mutate = [
    "src/archcheck/domain/",
    "src/archcheck/infrastructure/analyzers/",
]
pytest_add_cli_args_test_selection = ["tests/"]
also_copy = ["src/"]
