[build-system]
requires = ["scikit-build-core>=0.11", "cmake>=4.0"]
build-backend = "scikit_build_core.build"

[project]
name = "archcheck"
version = "0.1.0"
description = "Extensible framework for static + runtime architecture analysis (Python 3.14)"
authors = [{name = "Yuriy Krasilnikov"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.14"
keywords = [
    "architecture",
    "testing",
    "ast",
    "clean-architecture",
    "hexagonal",
    "dependency-injection",
    "static-analysis",
    "runtime-analysis",
    "code-quality",
    "sys-monitoring",
    "call-graph",
    "extensible",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: C",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
    "Framework :: Pytest",
]

# Runtime dependencies
dependencies = [
    "rich>=14.2.0",  # Console reporter formatting (Python 3.14 compatible)
]

[dependency-groups]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "build"},
    {include-group = "mutation"},
]

mutation = [
    "mutmut>=3.4.0",
]

lint = [
    "ruff>=0.14.6",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
]

test = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.25.0",
    "coverage[toml]>=7.12.0",
]

docs = [
    "sphinx>=8.2.3",
    "furo>=2025.9.25",
    "myst-parser>=4.0.1",
    "sphinx-autodoc-typehints>=3.5.2",
]

benchmark = [
    "pytest-benchmark>=5.2.3",
    "pytest-codspeed>=3.0.0",
    "scalene>=1.5.55",
]

security = [
    "pip-audit>=2.9.0",
    "bandit>=1.8.0",
    "vulture>=2.14",
]

build = [
    "scikit-build-core>=0.11",
    "cmake>=4.0",
    "build>=1.3.0",
    "twine>=6.2.0",
]

[project.urls]
Homepage = "https://github.com/YuriyKrasilnikov/archcheck"
Documentation = "https://archcheck.readthedocs.io"
Repository = "https://github.com/YuriyKrasilnikov/archcheck"
Issues = "https://github.com/YuriyKrasilnikov/archcheck/issues"

# TODO: Enable after Phase 5 (Fixtures & Patterns)
# [project.entry-points.pytest11]
# archcheck = "archcheck.presentation.pytest_plugin"

[tool.scikit-build]
wheel.packages = ["src/archcheck"]
cmake.build-type = "Release"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "CMakeLists.txt" },
    { file = "c/**/*.c" },
    { file = "c/**/*.h" },
]

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
unfixable = []
ignore = [
    # Frameworks we don't use
    "DJ",    # django
    "FAST",  # fastapi
    "AIR",   # airflow
    "NPY",   # numpy
    "PD",    # pandas
    # Features we don't need
    "INT",   # gettext/i18n
    "EXE",   # executable/shebang (library, not CLI)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    # === SECURITY (test data) ===
    "S101",   # assert — OK in tests
    "S104",   # 0.0.0.0 binding — Docker
    "S105",   # hardcoded password
    "S106",   # hardcoded password
    "S107",   # hardcoded temp
    "S110",   # try-except-pass — cleanup
    "S311",   # random — test data
    "S603",   # subprocess
    "S607",   # process invocation
    "S608",   # SQL injection — intentional

    # === STYLE ===
    "E402",   # imports not at top
    "E501",   # line too long

    # === COMPLEXITY ===
    "C901",   # complexity — test functions can be long
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR2004", # magic numbers — test values

    # === EXCEPTIONS ===
    "BLE001", # blind except — cleanup
    "TRY003", # long message
    "TRY301", # raise in try
    "EM101",  # raw string raise
    "EM102",  # f-string raise

    # === MISC ===
    "ARG001", # unused argument — fixtures
    "ARG002", # unused method argument
    "PT004",  # fixture without return
    "PT012",  # pytest.raises block
    "SLF001", # private member — testing internals
    "FBT001", # boolean positional — test params
    "FBT002", # boolean default
    "ERA001", # commented code — test notes
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "archcheck: marks architecture tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/archcheck"]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unreachable = true
strict_bytes = true

[tool.mutmut]
paths_to_mutate = [
    "src/archcheck/domain/",
    "src/archcheck/infrastructure/analyzers/",
]
pytest_add_cli_args_test_selection = ["tests/"]
also_copy = ["src/"]
